# vimbatim

./: .gitignore  API_notes.md  Affective Labor_Texas_JCampbellHawleyRooneyWilson_2-1-2026.docx  COTD 6-3-2026.docx  Cargo.toml  DROPDOWN_PLAN.md  FIRST_LAUNCH.txt  IMPLEMENTATION_PLAN.md  INSTRUCTIONS.md  README.md  Untitled 1.docx  Untitled.docx  Verbatim shit.docx  \  build.rs  card.hpp  closed_beta_plan.md  default_settings.conf  defaults.xml  document.xml  document2.xml  document2collapsed.xml  document3.xml  handoff.md  notes.txt  paragraph.hpp  performance_plan.md  run.hpp  run.sh  settings.conf  tmp_documentation.md  uniform_list_plan.md  vimbatim.cpp
.github/workflows/: beta-build.yml
config_parsing/: config_parsing.rs
docs/superpowers/plans/: 2026-06-27-tab-close-and-reorder.md
notes/: editor_instructions.md  formatting_todo.md  found_bugs.md  ongoing_bug-fixes.md  potential_hotkeys.md  vim_todo.md
notes/dated/: clipboard_todo.md
src/: app_toolbar.rs  auto_scroll.rs  case_converter.rs  color_picker.rs  document_ops.rs  docx_parser.rs  file_explorer.rs  formatting_ribbon.rs  keybinds.rs  lib.rs  main.rs  main_window.rs  settings_modal.rs  state.rs  tab_bar.rs  text_editor.rs  theme.rs  wikifi_export.rs
tests/: parse_testing.rs
tests/fixtures/: settings.conf
vimbatim/: Cargo.toml
