[package]
name = "vimbatim"
version = "0.1.0-beta.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "vimbatim"
path = "src/main.rs"

[dependencies]
gpui          = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit","x11", "wayland"] }
regex         = "1"
quick-xml     = "0.30"
zip           = "2"

# cargo-bundle (closed_beta_plan.md §1) reads this to build Vimbatim.app on
# macOS. `icon` is deliberately omitted — no .icns exists in the repo yet;
# cargo-bundle falls back to a generic app icon until one is added.
# `resources` copies settings.conf into Contents/Resources/ itself — without
# it, cargo-bundle never creates a Resources dir at all (no cp target to
# copy into after the fact).
[package.metadata.bundle]
name = "Vimbatim"
identifier = "com.vimbatim.app"
short_description = ".docx editor for collegiate policy debate"
resources = ["settings.conf"]
